--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
 
+@import 'variables.scss';
+
 // Import Bulma's core
 @import '~bulma/sass/utilities/_all';
 
@@ -11,3 +13,7 @@ $weight-bold: 800;
 // Import Bulma and Buefy styles
 @import '~bulma';
 @import '~buefy/src/scss/buefy';
+
+.padded {
+  padding: 3rem 1.5rem;
+}
