--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,7 @@
 @charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
-
 @import 'variables.scss';
-
 // Import Bulma's core
 @import '~bulma/sass/utilities/_all';
 
@@ -16,4 +14,19 @@ $weight-bold: 800;
 
 .padded {
   padding: 3rem 1.5rem;
+}
+
+.is-center {
+  text-align: center !important;
+}
+
+.view-content {
+  padding: 0;
+
+  @include mobile() {
+    padding: 0.5rem 0.75rem
+  }
+  @include tablet-only() {
+    padding: 0.5rem 0.75rem
+  }
 }
