feat(footer): #15 add a page footer

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,3 +20,13 @@
     padding: 3rem 0;
   }
 }
+
+.is-full-height {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+  .content {
+    flex: 1;
+  }
+}
