refactor: clear projects view elements

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,16 +1,17 @@
 /**
  * Colors
  */
-$dark: #141e52;
-$primary: #FCC419;
-$warning: #E67700;
-$danger: #E64980;
-$success: #63E6BE;
-$info: #5C7CFA;
+$dark: #5F3DC4;
+$primary: #38D9C0;
+$warning: #ffb600;
+$danger: #eb0006;
+$success: #00d500;
+$info: #5F3DC4;
 /**
  * Font
  */
-$family-sans-serif: 'Lato', sans-serif;
+//$family-sans-serif: 'Poppins', sans-serif;
+$family-sans-serif: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 $weight-bold: 800;
 /**
  * Responsiveness
