--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,32 +1,6 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap');
 @import 'variables.scss';
 @import '~bulma';
 @import '~buefy/src/scss/buefy';
-
-.padded {
-  padding: 3rem 1.5rem;
-}
-
-.is-center {
-  text-align: center !important;
-}
-
-.padded-container {
-  padding: 3rem 1.5rem;
-
-  @include desktop() {
-    padding: 3rem 0;
-  }
-}
-
-.is-full-height {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-
-  .content {
-    flex: 1;
-  }
-}
