--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -28,3 +28,15 @@ $fullhd: 960px + (2 * $gap);
 $fullhd-enabled: true;
 
 $navbar-height: 4rem;
+
+/**
+ * Spacing
+ */
+ $spacing-1: 0.25rem;
+ $spacing-2: 0.5rem;
+ $spacing-3: 0.75rem;
+ $spacing-4: 1rem;
+ $spacing-5: 1.25rem;
+ $spacing-6: 1.5rem;
+ $spacing-7: 1.75rem;
+ $spacing-8: 2rem;
