feat(home): add create tournament form

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,10 +1,9 @@
 @charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap');
-@import 'variables.scss';
+@import 'utilities/all';
 @import '~bulma';
 @import '~buefy/src/scss/buefy';
-@import 'animations.scss';
 
 .container.is-spaced {
   padding-top: 60px;
@@ -13,4 +12,8 @@
 
 .hidden {
   opacity: 0;
+}
+
+button.button {
+  font-weight: $weight-medium;
 }
