--- a/src/styles/utilities/animations.scss
+++ b/src/styles/utilities/animations.scss
@@ -3612,3 +3612,40 @@
     animation-iteration-count: 1 !important;
   }
 }
+
+
+@keyframes loading {
+  0% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes rotating {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: all .5s ease;
+}
+
+.fade-enter, .fade-leave-to {
+  opacity: 0;
+  transform: translateY(10px);
+}
+
+.slide-enter-active, .slide-leave-active {
+  transition: all .5s ease;
+}
+
+.slide-enter, .slide-leave-to {
+  opacity: 0;
+  transform: translateY(10px);
+}
