feat(team): add custom input field for add new team form

--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -2,4 +2,10 @@
     button {
         height: initial;
     }
+
+    tr {
+        &.is-wide {
+            line-height: 2.25;
+        }
+    }
 }
